--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.5
   tuple: 2.0.2
   quick_blue: 0.4.1
+  new_virtual_keyboard: ^0.1.4
 
 dev_dependencies:
   flutter_test:
