--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   tuple: 2.0.2
   quick_blue: 0.4.1
   new_virtual_keyboard: ^0.1.4
+  process_run: ^0.13.0
 
 dev_dependencies:
   flutter_test:
