--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   fluttertoast: ^8.2.1
   http: ^0.13.5
   tuple: 2.0.2
-  quick_blue: 0.4.1
+  #quick_blue: 0.4.1
   new_virtual_keyboard: ^0.1.4
   process_run: ^0.13.0
+  bluez: ^0.8.1
 
 dev_dependencies:
   flutter_test:
